fixed custom theme layout bug

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2707,6 +2707,10 @@ key {
           overflow: revert;
           height: auto;
 
+          &.customTheme {
+            margin-top: 0.5rem;
+          }
+
           .text {
             align-self: center;
           }
